# hal_atmosic

./: CMakeLists.txt  Kconfig
ATM33xx-5/: CMakeLists.txt  Kconfig
ATM33xx-5/drivers/: CMakeLists.txt  Kconfig
ATM33xx-5/drivers/atm_bp_clock/: atm_bp_clock.c
ATM33xx-5/drivers/atm_sha2/: Kconfig
ATM33xx-5/drivers/atmwstk/: Kconfig  atmwstk.c  atmwstk.h  atmwstk_CPD200_sha.h  atmwstk_PD100_sha.h  atmwstk_PD150_sha.h
ATM33xx-5/drivers/batt_model_hsc_liion/: batt_model_hsc_liion.c
ATM33xx-5/drivers/ble/: Kconfig  atmwstk_LL.elf  atmwstk_LL_sha.h  atmwstk_PD50LL.elf  atmwstk_PD50LL_sha.h
ATM33xx-5/drivers/ble/src/: ble_driver.c
ATM33xx-5/drivers/brwnout/: CMakeLists.txt  Kconfig  brwnout.c
ATM33xx-5/drivers/dma/: dma.h
ATM33xx-5/drivers/pmu/: Kconfig  pmu.c  pmu_cfg.h  pmu_core.po
ATM33xx-5/drivers/sec_jrnl/: sec_jrnl.h
ATM33xx-5/drivers/sec_reset/: sec_reset.c  sec_reset.h
ATM33xx-5/drivers/spi/: spi_multi.c  spi_multi.h
ATM33xx-5/drivers/timer/: timer.h
ATM33xx-5/drivers/trng/: trng_internal.h
ATM33xx-5/examples/spe/: Kconfig
ATM33xx-5/examples/spe/src/: main.c
ATM33xx-5/include/: arch.h  calibration.h  pinmap_x3xx.h  power.h  test_common.h
ATM33xx-5/include/arm/: ARMv8MBL.h
ATM33xx-5/include/armgcc/: compiler.h
ATM33xx-5/include/reg/: at_ahb_dma_regs_core_macro.h  at_ahb_prrf_regs_core_macro.h  at_ahb_sha2_regs_core_macro.h  at_apb_aes_regs_core_macro.h  at_apb_clkrstgen_regs_core_macro.h  at_apb_gadc_regs_core_macro.h  at_apb_i2c_regs_core_macro.h  at_apb_ksm_regs_core_macro.h  at_apb_pdm_regs_core_macro.h  at_apb_pseq_regs_core_macro.h  at_apb_pwm_regs_core_macro.h  at_apb_qdec_regs_core_macro.h  at_apb_qspi_regs_core_macro.h  at_apb_rcos_cal_regs_core_macro.h  at_apb_shub_regs_core_macro.h  at_apb_slwtimer_regs_core_macro.h  at_apb_spi_regs_core_macro.h  at_apb_swd_regs_core_macro.h  at_apb_trng_regs_core_macro.h  at_apb_tsmc_nvm_regs_core_macro.h  at_apb_uart_regs_core_macro.h  at_apb_wrpr_pins_regs_core_macro.h  at_apb_wrpr_short_regs_core_macro.h  at_i2s_regs_core_macro.h  at_lc_regs_core_macro.h  at_pinmux.h  at_wrpr.h  base_addr.h  base_addr_utils.h  mdm_macro.h  pll_regs_core_macro.h  pmu_gadc_regs_core_macro.h  pmu_pmuadc_regs_core_macro.h  pmu_spi.h  pmu_top_regs_core_macro.h  pmu_wurx_regs_core_macro.h  radio_rx_regs_core_macro.h  radio_spi.h  radio_synth_regs_core_macro.h  radio_top_regs_core_macro.h  (+4 more)
ATM33xx-5/lib/: CMakeLists.txt  Kconfig
ATM33xx-5/lib/app_batt/: Kconfig  app_batt.c
ATM33xx-5/lib/at_cmd/: at_cmd.c  at_cmd.h  at_cmd_pasr.c  at_cmd_pasr.h
ATM33xx-5/lib/atm_asm/: CMakeLists.txt  Kconfig
ATM33xx-5/lib/atm_utils_reg/: atm_utils_reg.c  atm_utils_reg.h
ATM33xx-5/lib/atm_vendor/: CMakeLists.txt  Kconfig  atm_hci_uart.c  atm_hci_uart.h
ATM33xx-5/openocd/: atm_flash.tcl  atm_rram.tcl  atm_sec_jrnl.tcl  atmx3_openocd.cfg
ATM33xx-5/openocd/fast_load/: atm_fast_load.cfg  atm_fast_load.tcl
ATM33xx-5/src/: power.c
lib/: CMakeLists.txt
tools/: Kconfig
tools/scripts/: atm_openocd.py  gen_atm_partition_info.py
west/: atm_arch_extension.py  sec_jrnl_west_extension.py
west/tests/: test_atm_arch_west_extension.py
zephyr/: module.yml
